# requests/post_request.go
@@ -1,10 +1,6 @@
 package requests
 
-type PostRequest struct {
-	Title  string `json:"title"`
-	Body   string `json:"body"`
-	Likes  int    `json:"likes"`
-	Draft  bool   `json:"draft"`
-	Author string `json:"author"`
-	// UserID uint `gorm:"user_id"`
+type LoginRequest struct {
+	Email    string `json:"email"`
+	Password string `json:"password"`
 }
