# requests/signup_request.go
@@ -1,0 +1,7 @@
+package requests
+
+type SignupRequest struct {
+	Name     string `json:"name"`
+	Email    string `gorm:"unique"`
+	Password string `json:"password"`
+}
